@@ -40,7 +40,7 @@ using namespace Botan;
 
 void usage();
 void to_pkcs8(char *in_path, char *out_path, char *file_pin);
-void to_bind(char *in_path, char *file_pin, char *out_path, char *algorithm_str);
+void to_bind(char *in_path, char *file_pin, char *name, int ttl, int key_flag, char *algorithm_str);
 
 // Support functions
 
@@ -51,8 +51,12 @@ void save_dsa_pkcs8(char *out_path, char *file_pin, BigInt bigDP, BigInt bigDQ,
 Private_Key* key_from_pkcs8(char *in_path, char *file_pin);
 int get_key_algorithm(Private_Key *priv_key, char *algorithm_str);
 void print_big_int(FILE *file_pointer, const char *file_tag, BigInt big_integer);
-void save_rsa_bind(char *out_path, Private_Key *priv_key, int algorithm);
-void save_dsa_bind(char *out_path, Private_Key *priv_key, int algorithm);
+void save_rsa_bind(char *name, int ttl, Private_Key *priv_key, int key_flag, int algorithm);
+void save_dsa_bind(char *name, int ttl, Private_Key *priv_key, int key_flag, int algorithm);
+int create_rsa_rdata(unsigned char *rdata, int length, Private_Key *priv_key, int key_flag, int algorithm);
+int create_dsa_rdata(unsigned char *rdata, int length, Private_Key *priv_key, int key_flag, int algorithm);
+int print_dnskey(FILE *file_pointer, char *name, int ttl, unsigned char *rdata, int rdata_size);
+unsigned int keytag(unsigned char key[], unsigned int keysize);
 
 // base64.c prototypes
 
